Removed z-index from container as this was preventing clicking on elements inside the container, it also provided no benefit

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -19,7 +19,6 @@ body {
 div.container-main {
     padding: 20px;
     width: 100%;
-    z-index: -1;
     position: absolute;
 }
 
